test/unicodeLoc.slq
// args: --run

def foo[n:!â„•](qs:ğ”¹^n){
	if n == 1{
		measure(qs);
		qs:=vector(n,0:ğ”¹); x:=2:ğ”¹; // error
		y:=(1:ğ”¹)~3; // error
		/+ğŸ’©+/ x:=2~3; // TODO: fix location
	}
	return qs;
}
def main(){
	return foo(1:ğ”¹,);
}
